--- a/src/shared_modules/content_manager/tests/CMakeLists.txt
+++ b/src/shared_modules/content_manager/tests/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.12.4)
 
 include_directories(${SRC_FOLDER}/external/googletest/googletest/include/)
 include_directories(${SRC_FOLDER}/external/googletest/googlemock/include/)
+include_directories(${SRC_FOLDER}/external/rocksdb/include)
 include_directories(${SRC_FOLDER}/shared_modules/content_manager/src/)
 include_directories(${SRC_FOLDER}/shared_modules/content_manager/include/)
+include_directories(${SRC_FOLDER}/shared_modules/utils)
 
 link_directories(${SRC_FOLDER}/external/googletest/lib/)
 
