--- a/src/engine/ruleset/integrations/windows/decoders/windows-sysmon.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-sysmon.yml
@@ -16,10 +16,6 @@ metadata:
     - https://learn.microsoft.com/es-es/sysinternals/downloads/sysmon
   versions: [Vista, "7", "8", "10", "11", Server 2012, Server 2016, Server 2019, Server 2022]
 
-#TODO: sysmon.dns.status
-# sysmon.file.archived
-#sysmon.file.is_executable
-#not found
 definitions:
   idEvent_map:
     "1":
@@ -183,6 +179,7 @@ normalize:
     - wazuh.decoders: array_append(windows-sysmon)
     - event.dataset: sysmon
     - event.kind: event
+    - event: merge_value($idEvent_map, $event.code)
 
     # Add categorization fields
     - rule.name: $windows.EventData.RuleName
@@ -211,8 +208,8 @@ normalize:
     - process.name: $_file_data.name
     - _file_data: parse_file($process.parent.executable)
     - process.parent.name: $_file_data.name
-    - process.args: split($process.command_line, \ )
-    - process.parent.args: split($process.parent.command_line, \ )
+    - process.args: split($process.command_line, ' ')
+    - process.parent.args: split($process.parent.command_line, ' ')
 
 
   ## File fields
@@ -222,6 +219,7 @@ normalize:
     - file.path: $windows.EventData.ImageLoaded
     - file.code_signature.subject_name: $windows.EventData.Signature
     - file.code_signature.status: $windows.EventData.SignatureStatus
+    - file.code_signature.signed: $windows.EventData.Signed
     - _file_data: parse_file($file.path)
     - file.directory: $_file_data.path
     - file.extension: $_file_data.ext
