Remove auth for the version check endpoint

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -13053,6 +13053,7 @@ paths:
       summary: "Check available version update"
       description: "Return if there an available version update"
       operationId: api.controllers.manager_controller.check_available_version
+      security: []
       parameters:
         - $ref: '#/components/parameters/pretty'
         - $ref: '#/components/parameters/wait_for_complete'
@@ -13061,10 +13062,6 @@ paths:
           description: "Information about the available version"
         '400':
           $ref: '#/components/responses/ResponseError'
-        '401':
-          $ref: '#/components/responses/UnauthorizedResponse'
-        '403':
-          $ref: '#/components/responses/PermissionDeniedResponse'
         '405':
           $ref: '#/components/responses/InvalidHTTPMethodResponse'
         '429':
