Added drop_fields for field fields in filebeat processor

--- a/src/engine/extension/filebeat/7.x/filebeat.yml
+++ b/src/engine/extension/filebeat/7.x/filebeat.yml
@@ -64,7 +64,7 @@ processors:
       fields: ["log.offset", "log.file"]
         
   - drop_fields:
-      fields: ["agent.ephemeral_id", "agent.hostname", "agent.version", "input"]
+      fields: ["agent.ephemeral_id", "agent.hostname", "agent.version", "input", "fields"]
   - drop_fields:
       when:
         not:
