--- a/src/engine/ruleset/integrations/windows/documentation.yml
+++ b/src/engine/ruleset/integrations/windows/documentation.yml
@@ -21,6 +21,14 @@ configuration: >
       </localfile>
   </ossec_config>
   ```
+  To detect events with sysmon, the following command must be executed:
+  ```
+  Sysmon64.exe -i sysmon_config.xml
+  ```
+  This configuration file can be configured by following this documentation
+  https://learn.microsoft.com/en-us/sysinternals/downloads/Sysmon
+
+  The generated events can be found in the event viewer at this location: Microsoft-Windows-Sysmon/Operational
 
 event:
   module: windows
