--- a/src/engine/ruleset/integrations/windows/rules/defense-evasion-disabling-windows-logs.yml
+++ b/src/engine/ruleset/integrations/windows/rules/defense-evasion-disabling-windows-logs.yml
@@ -7,7 +7,7 @@ metadata:
     attackers in an attempt to evade detection on a system.
     this method to execute malicious scripts and avoiding writing it to disk.
   versions: [Vista, "7", "8", "10", "11", Server 2012, Server 2016, Server 2019, Server 2022]
-  compatibility: This rule has been tested on Wazuh version 4.3.
+  compatibility: This rule has been tested on Wazuh version 4.5.
   author:
     name: Wazuh, Inc.
     date: 2023/09/15
@@ -16,14 +16,26 @@ metadata:
     - https://medium.com/palantir/tampering-with-windows-event-tracing-background-offense-and-defense-4be7ac62ac63
 
 check: >-
-    array_contains($event.type,start) AND array_contains($event.category,process)
-    AND (((contains($process.executable,logman.exe) OR $process.pe.original_file_name==Logman.exe))
-    AND (array_contains($process.args, EventLog) AND array_contains($process.args, stop, delete))
-    OR ((contains($process.name,pwsh.exe) OR contains($process.executable,powershell.exe)
-    OR contains($process.executable,powershell_ise.exe)) OR (contains($process.pe.original_file_name,pwsh.exe)
-    OR contains($process.pe.original_file_name,powershell.exe) OR contains($process.pe.original_file_name,powershell_ise.exe))
-    AND (array_contains($process.args,Set-Service) AND array_contains($process.args,EventLog) AND array_contains($process.args,Disabled)))
-    OR ((contains($process.name,auditpol.exe) OR contains($process.pe.original_file_name,AUDITPOL.EXE)) AND array_contains($process.args, '/success:disable')))
+    array_contains($event.type, start) AND array_contains($event.category, process)
+    AND (
+        (($process.name == logman.exe
+        OR $process.pe.original_file_name == Logman.exe))
+        AND (array_contains($process.args, EventLog)
+        AND array_contains($process.args, stop, delete))
+        OR (
+            ($process.name == pwsh.exe
+            OR $process.name == powershell.exe
+            OR $process.name == powershell_ise.exe)
+            OR ($process.pe.original_file_name == pwsh.exe
+            OR $process.pe.original_file_name == powershell.exe
+            OR $process.pe.original_file_name == powershell_ise.exe)
+            AND (array_contains($process.args, Set-Service)
+            AND array_contains($process.args, EventLog)
+            AND array_contains($process.args, Disabled)))
+        OR (
+            ($process.name == auditpol.exe
+            OR $process.pe.original_file_name == AUDITPOL.EXE)
+            AND array_contains($process.args, '/success:disable')))
 
 normalize:
   - map:
@@ -31,7 +43,6 @@ normalize:
 
       - rule.description: Identifies attempts to disable EventLog via the logman Windows utility, PowerShell, or auditpol. This is often done by
           attackers in an attempt to evade detection on a system.
-      - rule.id: 4de76544-f0e5-486a-8f84-eae0b6063cdc
       - rule.license: Wazuh Inc.
       - rule.name: Disable Windows Event and Security Logs Using Built-in Tools
 
