--- a/src/engine/ruleset/integrations/windows/rules/defense-evasion-timestomp-sysmon.yml
+++ b/src/engine/ruleset/integrations/windows/rules/defense-evasion-timestomp-sysmon.yml
@@ -7,24 +7,24 @@ metadata:
     malicious content with existing files. Timestomping is a technique that modifies the timestamps of
     a file often to mimic files that are in trusted directories.
   versions: [Vista, "7", "8", "10", "11", Server 2012, Server 2016, Server 2019, Server 2022]
-  compatibility: This rule has been tested on Wazuh version 4.3.
+  compatibility: This rule has been tested on Wazuh version 4.5.
   author:
     name: Wazuh, Inc.
     date: 2023/09/15
 
 check: >-
     array_contains($event.category, file) AND array_contains($event.type, change) AND $event.id == "2"
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Program Files\\\\([A-Za-z])')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Program Files (x86)\\\\([A-Za-z])')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Windows\\\\system32\\\\msiexec.exe')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Windows\\\\syswow64\\\\msiexec.exe')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Windows\\\\syswow64\\\\svchost.exe')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\WINDOWS\\\\syswow64\\\\backgroundTaskHost.exe')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\Google\\\\Chrome\\\\Application\\\\chrome.exe')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\slack\\\\app-[A-Za-z]+\\\\slack.exe')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\GitHubDesktop\\\\app-[A-Za-z]+\\\\GitHubDesktop.exe')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\Microsoft\\\\Teams\\\\current\\\\Teams.exe')
-    AND NOT regex_match($process.executable, '([A-Z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\Microsoft\\\\OneDrive\\\\OneDrive.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Program Files\\\\([A-Za-z])')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Program Files (x86)\\\\([A-Za-z])')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Windows\\\\system32\\\\msiexec\.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Windows\\\\syswow64\\\\msiexec\.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Windows\\\\syswow64\\\\svchost\.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\WINDOWS\\\\syswow64\\\\backgroundTaskHost\.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\Google\\\\Chrome\\\\Application\\\\chrome\.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\slack\\\\app-[A-Za-z]+\\\\slack\.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\GitHubDesktop\\\\app-[A-Za-z]+\\\\GitHubDesktop\.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\Microsoft\\\\Teams\\\\current\\\\Teams\.exe')
+    AND NOT regex_match($process.executable, '([A-Za-z]:)?\\\\Users\\\\[A-Za-z]+\\\\AppData\\\\Local\\\\Microsoft\\\\OneDrive\\\\OneDrive\.exe')
     AND NOT contains($file.extension, tmp) AND NOT contains($file.extension, ~tmp) AND NOT contains($file.extension, ~tmp)
     AND NOT contains($user.name, SYSTEM) AND NOT contains($user.name, Local Service) AND NOT contains($user.name, Network Service)
 
@@ -36,7 +36,6 @@ normalize:
       - rule.description: Identifies modification of a file creation time. Adversaries may modify file time attributes to blend
           malicious content with existing files. Timestomping is a technique that modifies the timestamps of
           a file often to mimic files that are in trusted directories.
-      - rule.id: 4de76544-f0e5-486a-8f84-eae0b6063cdc
       - rule.license: Wazuh Inc.
       - rule.name: File Creation Time Changed
 
