Adding selfupdate step for MacPorts

--- a/.github/workflows/macos-syscollector-tests.yml
+++ b/.github/workflows/macos-syscollector-tests.yml
@@ -32,7 +32,7 @@ jobs:
           rm -rf MacPorts-2.8.1-11-BigSur.pkg
       - name: Install port
         run: |
-          sudo /opt/local/bin/port install neovim
+          sudo /opt/local/bin/port -b install nano
       - name: Run tests
         run: |
           cd src/data_provider
