--- a/src/engine/ruleset/integrations/windows/rules/defense-evasion-deleting-websvr-access-logs.yml
+++ b/src/engine/ruleset/integrations/windows/rules/defense-evasion-deleting-websvr-access-logs.yml
@@ -5,21 +5,19 @@ metadata:
   title: Defense Evasion.
   description: Identifies the deletion of WebServer access logs. This may indicate an attempt to evade detection or destroy forensic
     evidence on a system.
-  versions: [Vista, "7", "8", "10", "11", Server 2012, Server 2016, Server 2019, Server 2022]
-  compatibility: This rule has been tested on Wazuh version 4.5.
   author:
     name: Wazuh, Inc.
     date: 2023/09/15
   references:
-    - "https://attack.mitre.org/tactics/TA0005/"
+    - https://attack.mitre.org/tactics/TA0005/
 
 check : >-
     array_contains($event.type, deletion) AND array_contains($event.category, file)
-    AND (regex_match($file.path, '^[A-Za-z]:\\\\inetpub\\\\logs\\\\LogFiles\\\\[A-Za-z]+\.log')
-        OR regex_match($file.path, '^/var\/log\/apache[A-Za-z]+\/access\.log')
+    AND (regex_match($file.path, '^[A-Za-z]:\\\\inetpub\\\\logs\\\\LogFiles\\\\[0-9A-Za-z_]+\.log')
+        OR regex_match($file.path, '^/var/log/apache[0-9A-Za-z_]+/access\.log')
         OR $file.path == /etc/httpd/logs/access_log
         OR $file.path == /var/log/httpd/access_log
-        OR regex_match($file.path, '^/var\/www\/[A-Za-z]+\/logs\/access\.log'))
+        OR regex_match($file.path, '^/var/www/[0-9A-Za-z_]+/logs/access\.log'))
 
 normalize:
   - map:
