--- a/src/engine/ruleset/integrations/windows/decoders/windows-sysmon.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-sysmon.yml
@@ -8,164 +8,164 @@ metadata:
   module: Windows Sysmon
   title: Decoder for Windows Sysmon
   compatibility: >
-    This decoder has been tested on Wazuh version 4.3
+    This integration was tested on Windows 10, with sysmon version v15.x but it should support version v10.x onwards
+  versions: [10x, 11x, 12x, 13x, 14x, 15x]
   author:
     name: Wazuh, Inc.
     date: 2023/01/23
   references:
     - https://learn.microsoft.com/es-es/sysinternals/downloads/sysmon
-  versions: [Vista, "7", "8", "10", "11", Server 2012, Server 2016, Server 2019, Server 2022]
 
 definitions:
   idEvent_map:
-    "1":
+    '1':
       category:
         - process
       type:
         - start
-    "2":
+    '2':
       category:
         - file
       type:
         - change
-    "3":
+    '3':
       category:
         - network
       type:
         - start
         - connection
         - protocol
-    "4":
+    '4':
       category:
         - process
       type:
         - change
-    "5":
+    '5':
       category:
         - process
       type:
         - end
-    "6":
+    '6':
       category:
         - driver
       type:
         - start
-    "7":
+    '7':
       category:
         - process
       type:
         - change
-    "8":
+    '8':
       category:
         - process
       type:
         - change
-    "9":
+    '9':
       category:
         - process
       type:
         - access
-    "10":
+    '10':
       category:
         - process
       type:
         - access
-    "11":
+    '11':
       category:
         - file
       type:
         - creation
-    "12":
+    '12':
       category:
         - configuration
         - registry
       type:
         - change
-    "13":
+    '13':
       category:
         - configuration
         - registry
       type:
         - change
-    "14":
+    '14':
       category:
         - configuration
         - registry
       type:
         - change
-    "15":
+    '15':
       category:
         - file
       type:
         - access
-    "16":
+    '16':
       category:
         - configuration
       type:
         - change
-    "17":
+    '17':
       category:
         - file
       type:
         - creation
-    "18":
+    '18':
       category:
         - file
       type:
         - access
-    "19":
+    '19':
       category:
         - process
       type:
         - creation
-    "20":
+    '20':
       category:
         - process
       type:
         - creation
-    "21":
+    '21':
       category:
         - process
       type:
         - access
-    "22":
+    '22':
       category:
         - network
       type:
         - connection
         - protocol
         - info
-    "23":
+    '23':
       category:
         - file
       type:
         - deletion
-    "24":
+    '24':
       type:
         - change
-    "25":
+    '25':
       category:
         - process
       type:
         - change
-    "26":
+    '26':
       category:
         - file
       type:
         - deletion
-    "27":
+    '27':
       category:
         - file
       type:
         - creation
         - denied
-    "28":
+    '28':
       category:
         - file
       type:
         - deletion
         - denied
-    "255":
+    '255':
       category:
         - process
       type:
@@ -184,7 +184,8 @@ normalize:
     # Add categorization fields
     - rule.name: $windows.EventData.RuleName
     - event.hash: $windows.EventData.Hash
-    - related.hash: $windows.EventData.Hashes
+    - _hashes: split($windows.EventData.Hashes, ',')
+    - related.hash: $_hashes
 
 
   ## Process fields
@@ -251,15 +252,15 @@ normalize:
     - sysmon.file.archived: $windows.EventData.Archived
     - sysmon.file.is_executable: $windows.EventData.IsExecutable
 
- - check: $file.code_signature.status == "Valid"
+ - check: $file.code_signature.status == Valid
    map:
      - file.code_signature.valid: True
 
- - check: $event.code == "255"
+ - check: $event.code == '255'
    map:
     - error.code: $event.code
 
- - check: $event.code == "25"
+ - check: $event.code == '25'
    map:
     - message: $windows.EventData.Type
 
@@ -271,7 +272,7 @@ normalize:
    - process.pe.file_version: $windows.EventData.FileVersion
    - process.pe.product: $windows.EventData.Product
 
- - check: $event.code == "7"
+ - check: $event.code == '7'
    map:
     - file.pe.original_file_name: $windows.EventData.OriginalFileName
     - file.pe.company: $windows.EventData.Company
@@ -280,7 +281,7 @@ normalize:
     - file.pe.product: $windows.EventData.Product
 
   # DNS event
- - check: $event.code == "22"
+ - check: $event.code == '22'
    map:
     - network.protocol: dns
 
@@ -288,33 +289,33 @@ normalize:
    map:
     - file.code_signature.valid: True
 
- - check: $windows.EventData.Initiated == True
+ - check: $windows.EventData.Initiated == 'true'
    map:
     - network.direction: egress
 
- - check: $windows.EventData.Initiated == false
+ - check: $windows.EventData.Initiated == 'false'
    map:
     - network.direction: ingress
 
- - check: $windows.EventData.SourceIsIpv6 == true
+ - check: $windows.EventData.SourceIsIpv6 == 'true'
    map:
     - network.type: ipv6
 
- - check: $windows.EventData.SourceIsIpv6 == false
+ - check: $windows.EventData.SourceIsIpv6 == 'false'
    map:
     - network.type: ipv4
 
- - check: $event.code == "1" OR $event.code == "23" OR $event.code == "24" OR $event.code == "25" OR $event.code == "26"
+ - check: $event.code == '1' OR $event.code == '23' OR $event.code == '24' OR $event.code == '25' OR $event.code == '26'
    map:
     - process.hash: $_hashes
 
- - check: $event.code == "6" OR $event.code == "7" OR $event.code == "15"
+ - check: $event.code == '6' OR $event.code == '7' OR $event.code == '15'
    map:
     - file.hash: $_hashes
     - file.pe.imphash: file.hash.imphash
 
   ## Registry fields
- - check: $event.code == "12" OR $event.code == "13" OR $event.code == "14"
+ - check: $event.code == '12' OR $event.code == '13' OR $event.code == '14'
    map:
     - registry.path: $windows.EventData.TargetObject
     - _registry.array: split($registry.path, \\)
@@ -323,12 +324,12 @@ normalize:
     - registry.key: join($_registry.array, \\)
     - registry.value: regex_extract($registry.path, ^.*\\\\(.*)$)
 
- - check: ($event.code == "12" OR $event.code == "13" OR $event.code == "14") AND starts_with($windows.Event.EventData.Details,QWORD)
+ - check: ($event.code == '12' OR $event.code == '13' OR $event.code == '14') AND starts_with($windows.Event.EventData.Details,QWORD)
    map:
     - registry.data.type: SZ_QWORD
     - registry.data.strings: regex_extract($windows.EventData.Details, ^QWORD\\s*\\((0x[0-9A-F]+-0x[0-9A-F]+\)\\\))
 
- - check: ($event.code == "12" OR $event.code == "13" OR $event.code == "14") AND starts_with($windows.EventData.Details,DWORD)
+ - check: ($event.code == '12' OR $event.code == '13' OR $event.code == '14') AND starts_with($windows.EventData.Details,DWORD)
    map:
     - registry.data.type: SZ_DWORD
     - _value: regex_extract($windows.EventData.Details, DWORD \\((0x[0-9A-F]{8}\)\\\))
@@ -339,7 +340,7 @@ normalize:
    map:
     - _is_binary_data: true
 
- - check:  ($event.code == "12" OR $event.code == "13" OR $event.code == "14") AND is_true($_is_binary_data)
+ - check:  ($event.code == '12' OR $event.code == '13' OR $event.code == '14') AND is_true($_is_binary_data)
    map:
     - registry.data.type: REG_BINARY
     - registry.data.strings: $windows.EventData.Details
